--- a/WinkelAppProject/src/view/Voorraad.form
+++ b/WinkelAppProject/src/view/Voorraad.form
@@ -187,7 +187,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Vooraad beheer"/>
+            <Property name="text" type="java.lang.String" value="Voorraad beheer"/>
           </Properties>
         </Component>
       </SubComponents>
