Producten toevoegen formuleer validatie

--- a/WinkelAppProject/src/view/NieuwProduct.form
+++ b/WinkelAppProject/src/view/NieuwProduct.form
@@ -236,7 +236,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTextPane" name="tfOmscrhijving">
+                <Component class="javax.swing.JTextPane" name="tfOmschrijving">
                 </Component>
               </SubComponents>
             </Container>
