--- a/WinkelAppProject/src/view/GebruikerOverzicht.form
+++ b/WinkelAppProject/src/view/GebruikerOverzicht.form
@@ -122,11 +122,13 @@
                 <Component class="javax.swing.JTable" name="jTable1">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="4" rowCount="0">
+                      <Table columnCount="6" rowCount="0">
                         <Column editable="false" title="Klant_id" type="java.lang.Integer"/>
                         <Column editable="false" title="Naam" type="java.lang.String"/>
                         <Column editable="false" title="Adres" type="java.lang.String"/>
                         <Column editable="false" title="Postcode" type="java.lang.String"/>
+                        <Column editable="true" title="Woonplaats" type="java.lang.String"/>
+                        <Column editable="false" title="Medewerker" type="java.lang.Boolean"/>
                       </Table>
                     </Property>
                   </Properties>
