--- a/WinkelAppProject/src/view/MainMenu.form
+++ b/WinkelAppProject/src/view/MainMenu.form
@@ -179,7 +179,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/pictures/icons/klanten.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Klanten"/>
+                <Property name="text" type="java.lang.String" value="Gebruikers"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
                 <Property name="contentAreaFilled" type="boolean" value="false"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
