--- a/WinkelAppProject/src/view/GebruikerOverzicht.form
+++ b/WinkelAppProject/src/view/GebruikerOverzicht.form
@@ -171,6 +171,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="buttonVerwijderenGebruikerMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonVerwijderenGebruikerActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
