--- a/WinkelAppProject/src/view/KlantGegevens.form
+++ b/WinkelAppProject/src/view/KlantGegevens.form
@@ -63,7 +63,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                          <Component id="bOpslaan" min="-2" max="-2" attributes="0"/>
+                          <Component id="jbOpslaan" min="-2" max="-2" attributes="0"/>
                           <EmptySpace pref="64" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -76,7 +76,7 @@
                           <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lTussenvoegselWijzigen" min="-2" max="-2" attributes="0"/>
-                              <Component id="bWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
+                              <Component id="jbWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
                               <Component id="lNaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="lAchternaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="lStraatnaamWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -191,11 +191,11 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                                  <Component id="bWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                                  <Component id="bOpslaan" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbOpslaan" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -297,12 +297,12 @@
             <Property name="editable" type="boolean" value="false"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="bWachtwoordWijzigen">
+        <Component class="javax.swing.JButton" name="jbWachtwoordWijzigen">
           <Properties>
             <Property name="text" type="java.lang.String" value="Wachtwoord wijzigen"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bWachtwoordWijzigenActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbWachtwoordWijzigenActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
@@ -400,12 +400,12 @@
             <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lEmailWijzigenMousePressed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="bOpslaan">
+        <Component class="javax.swing.JButton" name="jbOpslaan">
           <Properties>
             <Property name="text" type="java.lang.String" value="Wijzigingen opslaan"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bOpslaanActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbOpslaanActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
